--- a/package.json
+++ b/package.json
@@ -52,11 +52,10 @@
     "grunt": "1.0.1",
     "grunt-babel": "^6.0.0",
     "grunt-cli": "^1.2.0",
-    "grunt-contrib-sass": "1.0.0",
     "grunt-contrib-watch": "1.0.0",
     "grunt-eslint": "^19.0.0",
     "grunt-karma": "^2.0.0",
-    "grunt-scss-lint": "^0.5.0",
+    "grunt-sass": "^3.1.0",
     "grunt-webpack": "^1.0.18",
     "highlight.js": "^9.11.0",
     "istanbul-instrumenter-loader": "^2.0.0",
@@ -74,11 +73,11 @@
     "lodash": "^4.17.4",
     "mocha": "^3.4.1",
     "mocha-jsdom": "^1.1.0",
-    "node-sass": "^4.14.0",
+    "node-sass": "^8.0.0",
     "prop-types": "^15.5.10",
-    "react": "^16.2.0",
+    "react": "^18.2.0",
     "react-docgen": "^2.15.0",
-    "react-dom": "^16.2.0",
+    "react-dom": "^18.2.0",
     "react-transform-hmr": "^1.0.4",
     "sass-loader": "^4.1.1",
     "sinon": "^1.17.7",
